@@ -214,6 +214,13 @@
 			</exclusions>
 		</dependency>
 
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>${mockito.version}</version>
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -244,6 +251,7 @@
 						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.guide=ALL-UNNAMED
 						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.product=ALL-UNNAMED
 						--add-opens=com.avereon.xenon/com.avereon.xenon.tool.settings=ALL-UNNAMED
+						--add-opens=com.avereon.xenon/com.avereon.xenon.ui.util=ALL-UNNAMED
 						--add-opens=com.avereon.xenon/com.avereon.xenon.util=ALL-UNNAMED
 						--add-opens=com.avereon.xenon/com.avereon.xenon.workpane=ALL-UNNAMED
 						--add-opens=com.avereon.xenon/com.avereon.xenon.workspace=ALL-UNNAMED
